--- a/exo2.html
+++ b/exo2.html
@@ -10,11 +10,12 @@
     <div class="row">
       <div class="col col-xs-12 col-sm-12 col-md-2 col-lg-2 col-xl-12">
 <script type="text/javascript">
-      var message1 = "Nom : Doe\nPrénom : John\nVille : New-York";
+var lastname = "Nom : Doe\n";
+var firstname = "Prenom : John\n";
+var city = "Ville : New-York\n";
 
-      alert(message1);
-
-      </script>
+alert(lastname+firstname+city);
+  </script>
     </div>
   </div>
 </div>
